SYS-1153: Move scroll arrows to avoid overlap with LibChat widget on Browse pages (#21)
* move chatbox left to avoid overlapping arrows on browse page
* move styling from js to css to fix loading jump
* move scroll buttons instead of libchat icon

--- a/01UCS_LAL-UCLA/css/custom1.css
+++ b/01UCS_LAL-UCLA/css/custom1.css
@@ -427,3 +427,7 @@ md-input-container .md-input, .md-datepicker-input {
 #searchWithinJournal.search-within-p-only {
   display: none;
 } 
+
+#speedDialWidget.page-nav {
+  bottom: 80px !important;
+}
